fix: book info format attached to book covers

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -308,13 +308,16 @@ header{
 }
 .book-info {
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
     align-items: center;
     text-align: center;
     padding: 10px;
     background: #949FC2;
     color: white;
     font-size: 12px;
+}
+.book-info img {
+    padding-right: 5px;
 }
 .carousel-nav {
     display: flex;
